--- a/README
+++ b/README
@@ -2,3 +2,9 @@ cordova plugin add org.apache.cordova.devicemotion.AccelListener
 cordova plugin add com.msopentech.indexeddb
 cordova plugin add org.apache.cordova.geolocation
 cordova plugin add https://git-wip-us.apache.org/repos/asf/cordova-plugin-inappbrowser.git
+
+
+com.msopentech.indexedDB 0.1.0 "IndexedDB polyfill"
+org.apache.cordova.device-motion 0.2.9 "Device Motion"
+org.apache.cordova.geolocation 0.3.10 "Geolocation"
+org.apache.cordova.inappbrowser 0.5.4-dev "InAppBrowser"
